<resources>

    <string name="title">COLLABORATION STATION V.1.1 ALPHA</string>
    <string name="swipe"> "START BY SWIPING FROM THE LEFT HAND SIDE</string>
    <string name="desc">
        This tool is designed for collaboration between students that want or need to work with others.
        There is a chat function and a to-do list function. Feel free to use those to your advantage.
        HINT: TRY CHANGING SCREEN ORIENTATION TO GET SOME FUN ANIMATION!</string>

    <string name="app_name">Collaboration Station</string>
    <string name="header">Welcome!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="shoot">Shoot</string>
    <string name="splash_title">Collaboration Station</string>
    <string name="names">Made By Daniel And Dustin</string>
    <string name="send_location">Shoot Location</string>
   
    // TODO List stuff:
    <string name="todo_title_hint">Enter a title for todo item</string>
    <string name="todo_title_label">Title</string>
    <string name="todo_details_label">Details</string>
    <string name="todo_description">Description</string>
    <string name="todo_complete_label">Task Complete</string>
    <string name="date_picker_title">Task Deadline:</string>
    <string name="new_todo">New Item</string>
    <string name="delete_todo">Delete Item</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s todo items</string>
    <string name="back_btn">Back to list</string>
    <string name="delete_btn">Delete this item</string>
    <string name="new_todo_title">Create A New To-do Here!</string>
    <string name="push_new_todo">Create</string>
    <string name="complete">Is This Complete?</string>
    <string name="menu_delete">Delete</string>




</resources>
